--- a/src/client/jQuery.Client/index.html
+++ b/src/client/jQuery.Client/index.html
@@ -30,6 +30,24 @@
 <body>
 <div class="container">
     <header>
+        <section class="row upper-nav">
+            <div class="col-xs-8 col-md-4"><span>Welcome to our Famous Quote Quiz!</span></div>
+            <div class="col-md-2 placeholder"></div>
+            <div class="col-md-6">
+                <ul>
+                    <li><a class="fancybox" href="#login">Login/Register</a></li>
+                    <li><a class="fancybox" href="#faq">FAQ</a></li>
+                    <li><a class="fancybox" href="#newsletter">Newsletter</a></li>
+                    <li><a href="#">
+                        <select name="language">
+                            <option value="1">English</option>
+                            <option value="2">Russian</option>
+                            <option value="3">Bulgarian</option>
+                        </select>
+                    </a></li>
+                </ul>
+            </div>
+        </section>
         <nav class="flex-box-container navbar">
             <a href="#" id="responsive-icon"><i class="fa fa-bars" aria-hidden="true"></i></a>
             <div class="flex-item-main-nav nav-ul">
@@ -54,7 +72,8 @@
                         <input type="hidden" id="bin-quote-isTrue">
                         <input type="hidden" id="bin-quote-correct-author">
                         <h1 id="bin-quote-content" style="font-style: italic;">Quote</h1>
-                        <p>Did
+                        <p id="bin-quote-correct-answer" style="display: none;"></p>
+                        <p id="who-is">Did
                             <span id="bin-quote-author" style="font-size: large;">author</span>
                             say this?
                         </p>
@@ -80,6 +99,7 @@
                         <input type="hidden" id="correct-author-name">
                         <h3 style="color: white;">Who said it?</h3>
                         <h1 id="mult-quote-content" style="font-style: italic;">Quote</h1>
+                        <p id="mult-quote-correct-answer" style="display: none;"></p>
                         <div id="answers-buttons">
                             <button class="foot-subscribe-btn" id="authorX">AuthorX</button>
                             <button class="foot-subscribe-btn" id="authorY">AuthorY</button>
@@ -96,11 +116,11 @@
     </main>
     <footer>
         <section class="row newsletter-bar">
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
                 <span class="food-span-left">Subscribe to our newsletter</span>
                 <span class="foot-span-right">Get as much <span class="discount-price">spam</span> as possible!</span>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
                 <form class="subscribe-email">
                     <input type="email" placeholder="Your email here..." />
                     <button class="foot-subscribe-btn">Subscribe</button>
